--- a/Tests/CoreTests/CoreTests.csproj
+++ b/Tests/CoreTests/CoreTests.csproj
@@ -62,6 +62,12 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\Osminoq\Osminoq.csproj">
+      <Project>{4fb62eca-7282-4f35-80a0-d377b61bb438}</Project>
+      <Name>Osminoq</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
       <ItemGroup>
