--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,13 @@ $RECYCLE.BIN/
 Network Trash Folder
 Temporary Items
 .apdisk
+/Osminoq/bin/Debug
+/Osminoq/obj/Debug
+/Osminoq/packages
+*.suo
+/Tests/CoreTests/bin/Debug
+/Tests/CoreTests/obj/Debug
+*.ncrunchproject
+/Osminoq/_NCrunch_Osminoq
+/packages/CsvHelper.2.11.0
+*.user
