--- a/Osminoq/Osminoq.csproj
+++ b/Osminoq/Osminoq.csproj
@@ -43,16 +43,24 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Converter.cs" />
-    <Compile Include="IDataPackage.cs" />
+    <Compile Include="Csv\CsvExtractor.cs" />
+    <Compile Include="DataType.cs" />
+    <Compile Include="Extractor.cs" />
+    <Compile Include="IDataItem.cs" />
+    <Compile Include="IDataPackageInfo.cs" />
+    <Compile Include="IDataStreamFieldInfo.cs" />
+    <Compile Include="IDataStreamInfo.cs" />
+    <Compile Include="IDataStreamObjectInfo.cs" />
+    <Compile Include="IDataStreamPartitionInfo.cs" />
+    <Compile Include="IExtractor.cs" />
+    <Compile Include="IExtractorSettings.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Record.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Csv\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
