--- a/Osminoq/Osminoq.csproj
+++ b/Osminoq/Osminoq.csproj
@@ -44,6 +44,7 @@
   <ItemGroup>
     <Compile Include="Converter.cs" />
     <Compile Include="Csv\CsvExtractor.cs" />
+    <Compile Include="DataErrorStrategy.cs" />
     <Compile Include="DataType.cs" />
     <Compile Include="Extractor.cs" />
     <Compile Include="IDataItem.cs" />
@@ -56,6 +57,7 @@
     <Compile Include="IExtractorSettings.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Record.cs" />
+    <Compile Include="TextExtractor.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
