--- a/Osminoq/Osminoq.csproj
+++ b/Osminoq/Osminoq.csproj
@@ -45,9 +45,14 @@
     <Compile Include="Converter.cs" />
     <Compile Include="Csv\CsvExtractor.cs" />
     <Compile Include="DataErrorStrategy.cs" />
+    <Compile Include="DataItem.cs" />
+    <Compile Include="DataItemFactory.cs" />
+    <Compile Include="DataItemTypeHandlers.cs" />
     <Compile Include="DataType.cs" />
     <Compile Include="Extractor.cs" />
     <Compile Include="IDataItem.cs" />
+    <Compile Include="IDataItemInternal.cs" />
+    <Compile Include="IDataItemTypeHandler.cs" />
     <Compile Include="IDataPackageInfo.cs" />
     <Compile Include="IDataStreamFieldInfo.cs" />
     <Compile Include="IDataStreamInfo.cs" />
@@ -57,7 +62,10 @@
     <Compile Include="IExtractorSettings.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Record.cs" />
+    <Compile Include="Settings\ExtractorPartition.cs" />
+    <Compile Include="Settings\ExtractorSettings.cs" />
     <Compile Include="TextExtractor.cs" />
+    <Compile Include="TypeHandlers\StringTypeHandler.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
