il fix + properties

--- a/Tests/CoreTests/CoreTests.csproj
+++ b/Tests/CoreTests/CoreTests.csproj
@@ -38,6 +38,7 @@
     <Reference Include="CsvHelper">
       <HintPath>..\..\packages\CsvHelper.2.11.0\lib\net40-client\CsvHelper.dll</HintPath>
     </Reference>
+    <Reference Include="Microsoft.CSharp" />
     <Reference Include="System" />
   </ItemGroup>
   <Choose>
