--- a/Osminoq/Osminoq.csproj
+++ b/Osminoq/Osminoq.csproj
@@ -50,6 +50,7 @@
     <Compile Include="DataItem.cs" />
     <Compile Include="DataItemFactory.cs" />
     <Compile Include="DataItemProperty.cs" />
+    <Compile Include="DataItemUtilities.cs" />
     <Compile Include="Extractor.cs" />
     <Compile Include="IDataItem.cs" />
     <Compile Include="IDataItemInternal.cs" />
@@ -63,9 +64,11 @@
     <Compile Include="IExtractorSettings.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Record.cs" />
+    <Compile Include="RecordsetAdapter.cs" />
     <Compile Include="Settings\ExtractorPartition.cs" />
     <Compile Include="Settings\ExtractorSettings.cs" />
-    <Compile Include="TabularTextPartition.cs" />
+    <Compile Include="TabularSourceResolver.cs" />
+    <Compile Include="TabularTextRecordsetAdapter.cs" />
     <Compile Include="TextExtractor.cs" />
     <Compile Include="TypeHandlers\StringTypeHandler.cs" />
     <Compile Include="TypeHandlers\TypeHandlerAttribute.cs" />
