--- a/Osminoq/Osminoq.csproj
+++ b/Osminoq/Osminoq.csproj
@@ -45,31 +45,30 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Converter.cs" />
-    <Compile Include="Csv\CsvExtractor.cs" />
+    <Compile Include="Csv\CsvDataItemReader.cs" />
     <Compile Include="DataErrorStrategy.cs" />
     <Compile Include="DataItem.cs" />
     <Compile Include="DataItemFactory.cs" />
     <Compile Include="DataItemProperty.cs" />
     <Compile Include="DataItemUtilities.cs" />
-    <Compile Include="Extractor.cs" />
+    <Compile Include="DataItemReader.cs" />
     <Compile Include="IDataItem.cs" />
-    <Compile Include="IDataItemInternal.cs" />
+    <Compile Include="ITabularTextInitalizableDataItem.cs" />
     <Compile Include="IDataItemTypeHandler.cs" />
     <Compile Include="IDataPackageInfo.cs" />
     <Compile Include="IDataItemProperty.cs" />
     <Compile Include="IDataStreamInfo.cs" />
     <Compile Include="IDataStreamObjectInfo.cs" />
     <Compile Include="IDataStreamPartitionInfo.cs" />
-    <Compile Include="IExtractor.cs" />
+    <Compile Include="IDataItemReader.cs" />
     <Compile Include="IExtractorSettings.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Record.cs" />
     <Compile Include="RecordsetAdapter.cs" />
     <Compile Include="Settings\ExtractorPartition.cs" />
     <Compile Include="Settings\ExtractorSettings.cs" />
     <Compile Include="TabularSourceResolver.cs" />
     <Compile Include="TabularTextRecordsetAdapter.cs" />
-    <Compile Include="TextExtractor.cs" />
+    <Compile Include="TestTabularTextDataItem.cs" />
     <Compile Include="TypeHandlers\StringTypeHandler.cs" />
     <Compile Include="TypeHandlers\TypeHandlerAttribute.cs" />
     <Compile Include="TypeHandlers\TypeHandlerFactory.cs" />
