--- a/Osminoq/Osminoq.csproj
+++ b/Osminoq/Osminoq.csproj
@@ -44,7 +44,6 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Converter.cs" />
     <Compile Include="Csv\CsvDataItemReader.cs" />
     <Compile Include="DataErrorStrategy.cs" />
     <Compile Include="DataItem.cs" />
@@ -55,23 +54,25 @@
     <Compile Include="IDataItem.cs" />
     <Compile Include="ITabularTextInitalizableDataItem.cs" />
     <Compile Include="IDataItemTypeHandler.cs" />
-    <Compile Include="IDataPackageInfo.cs" />
     <Compile Include="IDataItemProperty.cs" />
-    <Compile Include="IDataStreamInfo.cs" />
     <Compile Include="IDataStreamObjectInfo.cs" />
-    <Compile Include="IDataStreamPartitionInfo.cs" />
+    <Compile Include="IDataSetModel.cs" />
     <Compile Include="IDataItemReader.cs" />
-    <Compile Include="IExtractorSettings.cs" />
+    <Compile Include="IDataPackageModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RecordsetAdapter.cs" />
-    <Compile Include="Settings\ExtractorPartition.cs" />
-    <Compile Include="Settings\ExtractorSettings.cs" />
+    <Compile Include="Settings\DataSetModel.cs" />
+    <Compile Include="Settings\DataPackageModel.cs" />
     <Compile Include="TabularSourceResolver.cs" />
     <Compile Include="TabularTextRecordsetAdapter.cs" />
     <Compile Include="TestTabularTextDataItem.cs" />
+    <Compile Include="TypeHandlers\BooleanTypeHandler.cs" />
+    <Compile Include="TypeHandlers\DateTimeTypeHandler.cs" />
+    <Compile Include="TypeHandlers\DoubleTypeHandler.cs" />
+    <Compile Include="TypeHandlers\GuidTypeHandler.cs" />
+    <Compile Include="TypeHandlers\IntegerTypeHandler.cs" />
     <Compile Include="TypeHandlers\StringTypeHandler.cs" />
     <Compile Include="TypeHandlers\TypeHandlerAttribute.cs" />
-    <Compile Include="TypeHandlers\TypeHandlerFactory.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
