--- a/Tests/CoreTests/CoreTests.csproj
+++ b/Tests/CoreTests/CoreTests.csproj
@@ -54,7 +54,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
-    <Compile Include="CsvTests.cs" />
+    <Compile Include="TypeHandlerTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="CsvExtractorTests.cs" />
   </ItemGroup>
@@ -71,6 +71,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="Data\malenames.txt" />
     <Content Include="Data\XMLFile1.xml" />
   </ItemGroup>
   <ItemGroup>
