--- a/Osminoq.csv/Osminoq.csv.csproj
+++ b/Osminoq.csv/Osminoq.csv.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{4FB62ECA-7282-4F35-80A0-D377B61BB438}</ProjectGuid>
+    <ProjectGuid>{CDBB61EE-729F-490F-9C5B-6214637EDCCF}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>TTRider.Osminoq</RootNamespace>
-    <AssemblyName>TTRider.Osminoq</AssemblyName>
+    <RootNamespace>TTRider.Osminoq.Csv</RootNamespace>
+    <AssemblyName>TTRider.Osminoq.Csv</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -34,8 +34,6 @@
       <HintPath>..\packages\CsvHelper.2.11.0\lib\net40-client\CsvHelper.dll</HintPath>
     </Reference>
     <Reference Include="System" />
-    <Reference Include="System.ComponentModel.Composition" />
-    <Reference Include="System.ComponentModel.Composition.Registration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -44,39 +42,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DataErrorStrategy.cs" />
-    <Compile Include="DataItem.cs" />
-    <Compile Include="DataItemFactory.cs" />
-    <Compile Include="DataItemProperty.cs" />
-    <Compile Include="DataItemUtilities.cs" />
-    <Compile Include="DataItemReader.cs" />
-    <Compile Include="IDataItem.cs" />
-    <Compile Include="ITabularTextInitalizableDataItem.cs" />
-    <Compile Include="IDataItemTypeHandler.cs" />
-    <Compile Include="IDataItemProperty.cs" />
-    <Compile Include="IDataStreamObjectInfo.cs" />
-    <Compile Include="IDataSetModel.cs" />
-    <Compile Include="IDataItemReader.cs" />
-    <Compile Include="IDataPackageModel.cs" />
+    <Compile Include="CsvDataItemReader.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RecordsetAdapter.cs" />
-    <Compile Include="Settings\DataSetModel.cs" />
-    <Compile Include="Settings\DataPackageModel.cs" />
-    <Compile Include="TabularSourceResolver.cs" />
-    <Compile Include="TabularTextRecordsetAdapter.cs" />
-    <Compile Include="TestTabularTextDataItem.cs" />
-    <Compile Include="TypeHandlers\BooleanTypeHandler.cs" />
-    <Compile Include="TypeHandlers\DateTimeTypeHandler.cs" />
-    <Compile Include="TypeHandlers\DoubleTypeHandler.cs" />
-    <Compile Include="TypeHandlers\GuidTypeHandler.cs" />
-    <Compile Include="TypeHandlers\IntegerTypeHandler.cs" />
-    <Compile Include="TypeHandlers\StringTypeHandler.cs" />
-    <Compile Include="TypeHandlers\TypeHandlerAttribute.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <ProjectReference Include="..\Osminoq\Osminoq.csproj">
+      <Project>{4FB62ECA-7282-4F35-80A0-D377B61BB438}</Project>
+      <Name>Osminoq</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
