--- a/Tests/CoreTests/Tests.Core.csproj
+++ b/Tests/CoreTests/Tests.Core.csproj
@@ -35,9 +35,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="CsvHelper">
-      <HintPath>..\..\packages\CsvHelper.2.11.0\lib\net40-client\CsvHelper.dll</HintPath>
-    </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System" />
   </ItemGroup>
@@ -56,13 +53,6 @@
   <ItemGroup>
     <Compile Include="TypeHandlerTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="CsvExtractorTests.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Data\Current_Employee_Names__Salaries__and_Position_Titles.csv" />
-    <EmbeddedResource Include="Data\Police_Stations.csv" />
-    <None Include="Data\Sex_Offenders.csv" />
-    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Osminoq\Osminoq.csproj">
@@ -70,13 +60,7 @@
       <Name>Osminoq</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Data\malenames.txt" />
-    <Content Include="Data\XMLFile1.xml" />
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Mocks\" />
-  </ItemGroup>
+  <ItemGroup />
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
       <ItemGroup>
