--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="..\Osminoq.csv\packages.config" />
   <repository path="..\Osminoq\packages.config" />
-  <repository path="..\Tests\CoreTests\packages.config" />
+  <repository path="..\Tests\Tests.Csv\packages.config" />
 </repositories>
